syntax = "proto3";

package com.github.mxsm.protocol.protobuf;
option java_package = "com.github.mxsm.protocol.protobuf";
option java_multiple_files = true;

enum RemotingCommandType{
    //连接
    CONNECT = 0;

    //返回命令
    HEART_BEAT = 1;
}